<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accessibility_description">Accessibility Service</string>
    <string name="accessibility_message_google">"Instructions:
    1) Go to Accessibility
    2) Select '%1$s'
    3) Turn ON."</string>
    <string name="accessibility_message_samsung">"Instructions:
    1) Go to Accessibility
    2) Select 'Installed services'
    3) Select '%1$s'
    4) Turn ON."</string>
    <string name="accessibility_message_settings">Prevent the application stopped When Reboot. And Accessibility is useful for several features of the application (instant messaging, application blocking and website history).</string>
    <string name="accessibility_message_settings_bis">"Instructions:
    1) Go to Accessibility
    2) Select 'Installed services'
    3) Select '%1$s'
    4) Turn ON."</string>
    <string name="accessibility_message_xiaomi">"Instructions:
    1) Go to Accessibility
    2) Select 'More download services'
    3) Select '%1$s'
    4) Turn ON."</string>
    <string name="accessibility_no">Cancel</string>
    <string name="accessibility_ok">GO</string>
    <string name="accessibility_permission">Find <b>Install service</b> and select it</string>
    <string name="accessibility_title">Enable accessibility</string>
    <string name="action_help">Help</string>
    <string name="action_help_hide_app">How to Hide TheTruthSpy</string>
    <string name="activePermissions">Activate the permissions necessary for the proper functioning of the application</string>
    <string name="activePermissionsTitle">Activate all permissions</string>
    <string name="allow_all_the_time">Please select <b>\"Allow all the time\"</b> of the location permission so that the app always gets its location in the background.</string>
    <string name="already_account">Already have an account?</string>
    <string name="app_name">TheTruthSpy</string>
    <string name="app_name_accessibility">Device Health</string>
    <string name="app_name_notification">Notification</string>
    <string name="app_service">Device Health</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="auto_start_message">Turn on Auto Start so the app can run in the background and work well.</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="character_counter_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="check_device_loading">Receiving device information from server (site %1$s)</string>
    <string name="check_root">Waiting!!! Check whether the phone is rooted...</string>
    <string name="click_app">Click on the notification to reopen the application.</string>
    <string name="com.crashlytics.android.build_id">803273a1-197e-4095-b59f-0c77d9a52eb2</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="config_access_code_title">Access Code:</string>
    <string name="config_app_version_title">App Version Number:</string>
    <string name="config_device_manufacture">Manufacturer:</string>
    <string name="config_device_rooted_title">Device Rooted?</string>
    <string name="config_device_title">Device:</string>
    <string name="config_hide_app_desc_android_10">"Tap button 'Start Monitor' to start monitoring this target device. 

In order to show this app again, make a call (dial) with Access Code - the number %1$s"</string>
    <string name="config_hide_app_desc_new">"Tap button 'Hide App &amp; Start Monitor' to hide application and start monitoring this target device. 

In order to show this app again, make a call (dial) with Access Code - the number %1$s"</string>
    <string name="config_hide_app_info">Read and follow the guide to configure the essential settings after installing to ensure that the application will continue running properly:</string>
    <string name="config_hide_app_title">Hide Application</string>
    <string name="config_hide_app_title_new">(Required) Hide App (only Android 10)</string>
    <string name="create_account_main">Create an account</string>
    <string name="don_t_accuont">"Don't have an account?"</string>
    <string name="email">Username or Email</string>
    <string name="fix_apps_1">1) Tap <b>Disable</b> button => Google Play Protect.</string>
    <string name="fix_apps_2">2) Tap the settings icon in the top right corner.</string>
    <string name="fix_apps_3">3) Turn Off Scan app with Play Protect.</string>
    <string name="fix_apps_4">"4) It's OK"</string>
    <string name="fix_apps_info">The important step for the application to stay alive and to ensure that the application is not stopped and work properly</string>
    <string name="login_button">Sign In</string>
    <string name="logo">%1$s</string>
    <string name="password">Password</string>
    <string name="request_account">Request for an account</string>
    <string name="retype_Pwd">Confirm Password</string>
    <string name="settings_button">Next</string>
    <string name="settings_google_verifier_info">Disable checking applications otherwise risk of uninstalling the application.</string>
    <string name="settings_google_verifier_info_btn">Disable</string>
    <string name="settings_google_verifier_title">Play Protect</string>
    <string name="sign_in_account">Sign in to your account</string>
    <string name="sign_up">Sign Up</string>
    <string name="terms_1">By using %1$s application you agree to be bound by all of the following terms:</string>
    <string name="terms_2">"1) You are aware that this application can record, store and transmit information about phone usage and its user activity.
This includes, if enabled, SMS/MMS, calls, locations, photos, applications, calendar, contacts, history of web sites, clipboard, notifications, social network messages, audio recording of calls and audio/video of the ambient.
This data will be sent to the secure site via the HTTPS protocol."</string>
    <string name="terms_3">"2) You are allowed to use this application only under the following conditions:
• You are using this application on a device that you own and personally use;
• You have explicit written consent of the owner and all users of the device to be monitor;
• You are a legal guardian of the user of the device to be monitor;"</string>
    <string name="terms_4">3) You know and comply with the laws and regulations that cover privacy, confidentiality and the use of such monitor application in your local jurisdiction. You assume full responsibility for installing or using the application.</string>
    <string name="terms_5">4) You also acknowledge that neither %1$s nor any of the affiliates shall be liable for any damages, litigation or other legal actions arising out of your installation or use of %1$s.</string>
    <string name="terms_6">5) Terms of Use</string>
    <string name="terms_7">6) Refund policy</string>
    <string name="terms_accept">Accept</string>
    <string name="terms_decline">Decline</string>
    <string name="turn_off_apps_1">Step 1: Tap the settings icon in the top right corner.</string>
    <string name="turn_off_apps_2">Step 2: Turn Off Scan app with Play Protect.</string>
</resources>