<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginBottom="52.0dip" android:fillViewport="true" android:layout_alignParentTop="true">
        <LinearLayout android:orientation="vertical" android:paddingLeft="16.0dip" android:paddingTop="5.0dip" android:paddingRight="16.0dip" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="16.0sp" android:textStyle="bold" android:gravity="center" android:id="@id/tvTerms1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/terms_1" />
            <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/terms_2" />
            <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/terms_3" />
            <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/terms_4" />
            <TextView android:id="@id/tvTerms4" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/terms_5" />
            <TextView android:textColor="?android:textColorLink" android:autoLink="none" android:id="@id/tvTerms5" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/terms_6" />
            <TextView android:textColor="?android:textColorLink" android:autoLink="web" android:id="@id/tvTerms6" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="@string/terms_7" />
        </LinearLayout>
    </ScrollView>
    <LinearLayout android:orientation="horizontal" android:background="@android:color/transparent" android:layout_width="fill_parent" android:layout_height="wrap_content" android:weightSum="2.0" android:layout_alignParentBottom="true">
        <android.support.v7.widget.AppCompatButton android:textColor="@color/icons" android:gravity="center" android:layout_gravity="start" android:id="@id/buttonLoginDecline" android:background="@drawable/custom_color_decline" android:paddingRight="15.0dip" android:layout_width="0.0dip" android:layout_height="45.0dip" android:layout_marginBottom="10.0dip" android:text="@string/terms_decline" android:layout_weight="1.0" android:textAllCaps="false" android:drawableStart="@drawable/ic_cancel_24px" android:paddingStart="10.0dip" android:layout_marginStart="30.0dip" android:layout_marginEnd="40.0dip" />
        <android.support.v7.widget.AppCompatButton android:textColor="@color/icons" android:layout_gravity="end" android:id="@id/buttonLoginOK" android:background="@drawable/custom_color_accept" android:layout_width="0.0dip" android:layout_height="45.0dip" android:layout_marginBottom="10.0dip" android:text="@string/terms_accept" android:layout_weight="1.0" android:textAllCaps="false" android:drawableEnd="@drawable/ic_navigate_next_24px" android:paddingStart="25.0dip" android:layout_marginStart="40.0dip" android:layout_marginEnd="30.0dip" app:backgroundTint="@color/colorPrimary" />
    </LinearLayout>
</RelativeLayout>