<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginBottom="52.0dip" android:fillViewport="true" android:layout_alignParentTop="true">
        <LinearLayout android:orientation="vertical" android:padding="@dimen/activity_vertical_margin" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <android.support.v7.widget.AppCompatTextView android:textSize="16.0sp" android:textStyle="bold" android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/settings_google_verifier_info" />
            <android.support.v7.widget.AppCompatTextView android:textSize="16.0sp" android:textStyle="bold" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/fix_apps_info" />
            <android.support.v7.widget.AppCompatTextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/fix_apps_1" />
            <android.support.v7.widget.AppCompatTextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/fix_apps_2" />
            <android.support.v7.widget.AppCompatTextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/fix_apps_3" />
            <android.support.v7.widget.AppCompatTextView android:id="@id/textEndProtect" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/fix_apps_4" />
            <View android:id="@id/viewSettingsDividerBis" android:background="@color/divider" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginTop="8.0dip" />
            <RelativeLayout android:id="@id/rlPlayProtect" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <android.support.v7.widget.AppCompatTextView android:textSize="13.0sp" android:textColor="@color/primaryText" android:id="@id/tvPlayProtect" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/activity_horizontal_margin" android:layout_marginTop="16.0dip" android:layout_marginRight="@dimen/activity_horizontal_margin" android:text="@string/settings_google_verifier_title" android:layout_toLeftOf="@id/btnPlayProtect" android:layout_alignParentLeft="true" />
                <android.support.v7.widget.AppCompatButton android:textSize="13.0sp" android:textColor="@color/icons" android:id="@id/btnPlayProtect" android:background="@drawable/custom_color_accept" android:layout_width="120.0dip" android:layout_height="45.0dip" android:layout_marginTop="7.0dip" android:text="@string/settings_google_verifier_info_btn" android:layout_alignParentRight="true" android:layout_centerInParent="true" android:textAllCaps="false" android:drawableEnd="@drawable/ic_navigate_next_24px" android:paddingStart="20.0dip" app:backgroundTint="@color/colorPrimary" />
            </RelativeLayout>
            <android.support.v7.widget.AppCompatTextView android:textStyle="bold" android:textColor="#ff000000" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:text="@string/turn_off_apps_1" />
            <android.support.v7.widget.AppCompatImageView android:layout_gravity="center_horizontal" android:layout_width="220.0dip" android:layout_height="110.0dip" android:layout_margin="16.0dip" android:src="@drawable/turnoff_prt" android:scaleType="fitXY" android:layout_weight="0.0" />
            <android.support.v7.widget.AppCompatTextView android:textStyle="bold" android:textColor="#ff000000" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/turn_off_apps_2" />
            <android.support.v7.widget.AppCompatImageView android:layout_gravity="center_horizontal" android:layout_width="220.0dip" android:layout_height="145.0dip" android:layout_margin="16.0dip" android:src="@drawable/turnoff_prt1" android:scaleType="fitXY" android:layout_weight="0.0" />
        </LinearLayout>
    </ScrollView>
    <android.support.v7.widget.AppCompatButton android:textColor="@color/icons" android:id="@id/buttonOK" android:background="@drawable/custom_color_accept" android:layout_width="120.0dip" android:layout_height="45.0dip" android:layout_marginBottom="5.0dip" android:text="@string/settings_button" android:layout_alignParentBottom="true" android:textAllCaps="false" android:drawableEnd="@drawable/ic_navigate_next_24px" android:paddingStart="20.0dip" android:layout_marginEnd="5.0dip" android:layout_alignParentEnd="true" app:backgroundTint="@color/colorPrimary" />
</RelativeLayout>