<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:background="@drawable/blue" android:layout_width="fill_parent" android:layout_height="fill_parent" android:fillViewport="true"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout android:background="#ffbab4bb" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:orientation="vertical" android:background="@drawable/custom_color_login" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:layout_marginRight="15.0dip" android:layout_centerInParent="true">
            <TextView android:textSize="36.0sp" android:textStyle="bold" android:textColor="@color/colorPrimary" android:gravity="center_horizontal" android:id="@id/txt_logo" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/logo" />
            <TextView android:textSize="16.0sp" android:textColor="#ff7a7878" android:gravity="center_horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/sign_in_account" />
            <LinearLayout android:gravity="center_horizontal" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:layout_marginBottom="20.0dip">
                <TextView android:textSize="18.0sp" android:textColor="#ff000000" android:gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/don_t_accuont" />
                <TextView android:textSize="18.0sp" android:textStyle="bold" android:textColor="#ff0b84aa" android:gravity="center_horizontal" android:id="@id/link_to_register" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/sign_up" android:layout_marginStart="5.0dip" />
            </LinearLayout>
            <android.support.design.widget.TextInputLayout android:id="@id/email" android:layout_width="fill_parent" android:layout_height="fill_parent">
                <EditText android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:layout_marginBottom="20.0dip" android:hint="Email" android:singleLine="true" android:inputType="textEmailAddress" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout android:id="@id/password" android:layout_width="fill_parent" android:layout_height="fill_parent">
                <EditText android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:hint="Password" android:password="true" android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>
            <android.support.v7.widget.AppCompatButton android:textColor="@color/icons" android:layout_gravity="center_horizontal" android:id="@id/buttonLoginOK" android:background="@drawable/custom_color_accept" android:layout_width="150.0dip" android:layout_height="50.0dip" android:layout_marginTop="16.0dip" android:layout_marginBottom="30.0dip" android:text="@string/login_button" android:textAllCaps="false" app:backgroundTint="@color/colorPrimary" />
        </LinearLayout>
    </RelativeLayout>
</ScrollView>