<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center_vertical" android:orientation="vertical" android:id="@id/ln_Log_File" android:background="#fff5f2f5" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="vertical" android:background="@drawable/custom_color_login_main" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginRight="20.0dip">
        <TextView android:textSize="36.0sp" android:textStyle="bold" android:textColor="@color/colorPrimary" android:gravity="center_horizontal" android:id="@id/txt_logo_main" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="40.0dip" android:layout_marginBottom="50.0dip" android:text="@string/logo" />
        <android.support.v7.widget.AppCompatButton android:textColor="@color/icons" android:layout_gravity="center_horizontal" android:id="@id/buttonCreateAccount" android:background="@drawable/custom_color_login_logout" android:layout_width="250.0dip" android:layout_height="50.0dip" android:layout_marginLeft="5.0dip" android:layout_marginTop="32.0dip" android:layout_marginRight="5.0dip" android:layout_marginBottom="5.0dip" android:text="@string/sign_up" android:textAllCaps="false" app:backgroundTint="@color/colorPrimary" />
        <android.support.v7.widget.AppCompatButton android:textColor="@color/colorPrimary" android:layout_gravity="center_horizontal" android:id="@id/buttonLogin" android:background="@drawable/custom_btn_signin" android:layout_width="250.0dip" android:layout_height="50.0dip" android:layout_marginLeft="5.0dip" android:layout_marginTop="16.0dip" android:layout_marginRight="5.0dip" android:layout_marginBottom="70.0dip" android:text="@string/login_button" android:textAllCaps="false" />
    </LinearLayout>
</LinearLayout>